feat(backend): 补齐 API_SPEC 缺口（入库单列表/详情 + 库位筛选 + 商品分页）
- 入库单列表 GET /inbound-orders 与详情 GET /inbound-orders/{id}（API_SPEC 3.2/3.3）
- 库存查询增加 locationCode 库位筛选（TASKS 任务2要求）
- 商品列表支持分页 page/pageSize（API_SPEC 1）
- pageSize 加 @Max(100) 校验，GlobalExceptionHandler 处理 ConstraintViolationException 返回 400

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>